CSS: styling 1st

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
     <main class="contents">
         <section class="item-input">
-            <input type="text">
+            <input type="text" id="item-input">
             <input type="button" value="add">
         </section>
         <section class="item-display">
             <ul class="item-container">
-                <li class="item">
+                <li id="item">
                     <h4 class="item-title">item</h4>
                     <button class="item-delete">delete</button>
                 </li>
