JS: 아이템 추가, 삭제 기능 추가

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/2b05509517.js"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <div class="app-container">
@@ -18,10 +19,6 @@
         <main class="contents">
             <section class="item-display">
                 <ul class="item-container">
-                    <li id="item">
-                        <h4 class="item-title">item</h4>
-                        <button class="item-delete"><i class="fas fa-trash-alt"></i></button>
-                    </li>
                 </ul>
             </section>
             <section class="item-input">
